docs/_static/conf/scss/main-2026.scss
/* ... */
body .page-content {
    padding-top: 36px;

    a:not(.headerlink), a:active:not(.headerlink), a:visited:not(.headerlink), a:link:not(.headerlink) {
        border-bottom: 1px dashed $header-color;
        color: $header-color;
        text-decoration: none;
    }

    a:hover:not(.headerlink) {
        border-bottom: 1px solid $main-color;
        text-decoration: none;
    }

    a.headerlink {
        color: #fff;
    }

    a.headerlink:hover {
        color: rgb(68, 68, 68);
        background: rgb(234, 234, 234);
    }


    h1, h2, h3, h4, h5, h6 {
        text-align: left;
    }

    .ticket {
        padding: 24px 36px;
        background-color: #EFEFED;
        border: 2px solid #FFD700;
        margin-top: 36px;
        border-radius: 3px;
        margin-top: 20px;

        a.headerlink, a.headerlink:visited {
            padding-left: 10px;
            color: #FFD700;
        }

        h2 {
            font-family: $secondary-font-family;
            margin-bottom: 10px;
            margin-top: 10px;
            color: #333333;

            strong {
                font-weight: regular;
                color: #333333;
            }

            em {
                font-style: normal;
                color: #333333;
            }

            // a.headerlink {}
         }

         h2, p {
             text-align: left;
             color: #333333;
         }

         p {
             font-weight: $semi-bold
         }
    }

    .schedule {
        background-color: #E8DDCF;
        padding: 24px;
        border: #CEBEA9 1px solid;
        border-radius: 4px;
        margin: 20px auto;

        &-header {
            font-family: $secondary-font-family;
            font-size: 20px;
            padding-bottom: 20px;
            margin-bottom: 20px;
            border-bottom: #BEB2A0 2px solid;
        }

        &-item {
            display: flex;
            align-items: flex-start;
            border-bottom: 1px solid #BEB2A0;
            padding-bottom: 10px;
            margin-bottom: 10px;

            .item-starting-time {
                flex-shrink: 0;
                width: 100px;
                padding-right: 16px;
                font-weight: $bold;
            }

            .item-speaker {
                font-weight: $light;
            }

            .item-speaker-picture {
                display: none;
            }

            .item-content {
                flex: 1;
            }
        }
    }

    .talk {
        background-color: #E8DDCF;
        padding: 24px;
        border: #CEBEA9 1px solid;
        border-radius: 4px;
        margin: 20px auto;

        .speaker-info {
            display: flex;
            border-bottom: 2px solid #beb2a0;
            margin-bottom: 20px;
            padding-bottom: 20px;



            & > img {
                width: 40px;
                height: 40px;
                border-radius: 20px;
                margin-right: 10px;
            }

            .speaker-contact-info {
                position: relative;
                top: -6px;

                .speaker-name {
                    font-family: $secondary-font-family;
                    font-size: 20px;
                    margin-bottom: 0px;
                }

                ul {
                    li {
                        display: inline-block;
                        padding-left: 0;
                        padding-right: 8px;
                        line-height: 0.1;

                        &:before {
                            content: "";
                        }

                        .twitter {
                            width: 24px;
                        }

                        .webpage {
                            height: 22px;
                        }

                        .github {
                            height: 22px;
                        }
                    }
                }
            }
        }

        .talk-content .talk-title {
            margin-bottom: 4px;
        }
        .talk-content .talk-description ul li:before {
            color: #4a4a4a;
        }
    }
}

.hero {
    background-size: cover;

    nav {
        border-bottom: 1px solid $white;
    }

    .uk-navbar-dropdown {
        width: 160px;
        top: 112px;
        border-radius: 4px;
    }

    .uk-navbar-nav ul.uk-navbar-dropdown-nav {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;

         li:first-child ~ li {
            padding-left: 0px;
        }
    }

    .uk-navbar-left {
        padding-left: 15px;
    }

    ul li {
        font-size: 14px;
        display: inline-block;
        text-transform: uppercase;

        &:first-child ~ li {
            padding-left: 4px;
        }

        a {
            color: $font-black;
        }
    }

    .uk-navbar-toggle {
        color: $font-black;
    }

    .logo-container, .hero-text {
        display: flex;
        justify-content: center;
    }

    .hero-text {
        flex-direction: column;
        font-size: 20px;
        font-weight: $bold;
        text-align: center;

        p b {
            color: $white;
        }

        p {
            color: $font-black;
            margin-top: 16px;
            margin-bottom: 16px;
        }
    }

    a.hero-logo, a.hero-logo:hover, a.hero-logo:visited, a.hero-logo:active {
        padding-top: 36px;
        color: $font-black;
        font-size: 46px;
        font-family: $secondary-font-family;
        text-transform: uppercase;
        line-height: 40px;
        text-align: right;
        text-decoration: none;

        em {
            color: $white;
            font-size: 28px;
            font-style: normal;
            font-weight: normal;
            line-height: 18px;
            position: relative;
            top: -10px;
        }
    }

    .ctas-block {
        margin-bottom: 28px;

        &> *  {
            margin-bottom: 12px;
        }

    }
}
/* ... */

